<resources>
    <string name="app_name">Anxiety Health Planet</string>
    <string name="email">Email</string>
    <string name="username">username</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="CreateProfile">Create Profile</string>
    <string name="Register"> Register</string>
    <string name="clickRegister">Click to Register</string>
    <string name="clicklogin">Click to Login</string>
    <string name="agreement">I accept the terms and policies of the company</string>
    <array name="curency">
        <item>Add Filter</item>
        <item>Doctor</item>
        <item>Patient</item>

    </array>

    <string name="tickets">Tickets</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

</resources>
