<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/companyname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"

        android:text="@string/app_name"
        android:textColor="@color/primarytext"
        android:textSize="25dp"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/loginemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:hint="@string/email"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="55dp"
        android:textColor="@color/primarytext"
        android:inputType="textEmailAddress"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@+id/companyname"
        tools:layout_editor_absoluteX="35dp" />

    <EditText
        android:id="@+id/loginpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="55dp"
        android:inputType="textPassword"
        android:layout_marginRight="55dp"
        android:hint="@string/password"
        android:textColor="@color/primarytext"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@+id/loginemail"
        tools:layout_editor_absoluteX="35dp" />


    <Button
        android:id="@+id/loginbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/Login"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginpassword"
        app:layout_constraintVertical_bias="0.57" />

    <TextView
        android:id="@+id/loginregister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="28dp"
        android:textSize="20dp"
        android:text="@string/clickRegister"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginbutton"
        app:layout_constraintVertical_bias="0.648" />
</androidx.constraintlayout.widget.ConstraintLayout>